--- a/gb/24/2/2/n14172369.md
+++ b/gb/24/2/2/n14172369.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：邓小平为何撤了国安部长凌云的职？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14172370-1-179.jpg" />
 <h6>图为乌云密布的北京天安门广场。（Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2024年02月03日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%8C%E4%BA%91.md#1">凌云</a>是中共国家安全部的首任部长。1983年7月，中共正式组建国家安全部。当时中共实际的最高领导人、中央军委主席邓小平，特别挑选凌云任部长。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%8C%E4%BA%91.md#1">凌云</a>长期从事中共安全保卫工作。上世纪40年代，在延安时，他就是中央社会部部长康生的部下，后当过康生的秘书。1979年，凌云任中共公安部副部长时，陪同邓小平出访美国，任邓的安全工作小组副组长，尽心竭力，深得邓的好感。</p>
-<p>但是，到了1985年9月，邓小平却突然下令撤了凌云的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E9%83%A8%E9%95%BF.md#1">国安部长</a>的职务，而且是一撤到底，既没有在全国人大或全国政协给他安排一个闲职，也没有在中央顾问委员会挂个委员的头衔。</p>
-<p>深得邓小平信任的凌云，担任<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E9%83%A8%E9%95%BF.md#1">国安部长</a>仅两年零两个月，为什么突然被撤职，且一撤到底？</p>
-<p>最关键的原因是，当年发生一起惊天大案，中共国家安全部的情报官员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%9B%E9%80%83%E7%BE%8E%E5%9B%BD.md#1">叛逃美国</a>。</p>
-<h2><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9E%E5%BC%BA%E5%A3%B0.md#1">俞强声</a>是什么人？</strong></h2>
+	<p>【大纪元2024年02月03日讯】凌云是中共国家安全部的首任部长。1983年7月，中共正式组建国家安全部。当时中共实际的最高领导人、中央军委主席邓小平，特别挑选凌云任部长。</p>
+<p>凌云长期从事中共安全保卫工作。上世纪40年代，在延安时，他就是中央社会部部长康生的部下，后当过康生的秘书。1979年，凌云任中共公安部副部长时，陪同邓小平出访美国，任邓的安全工作小组副组长，尽心竭力，深得邓的好感。</p>
+<p>但是，到了1985年9月，邓小平却突然下令撤了凌云的国安部长的职务，而且是一撤到底，既没有在全国人大或全国政协给他安排一个闲职，也没有在中央顾问委员会挂个委员的头衔。</p>
+<p>深得邓小平信任的凌云，担任国安部长仅两年零两个月，为什么突然被撤职，且一撤到底？</p>
+<p>最关键的原因是，当年发生一起惊天大案，中共国家安全部的情报官员俞强声叛逃美国。</p>
+<h2><strong>俞强声是什么人？</strong></h2>
 <p>俞强声出身于浙江绍兴的名门望族。他的家族中有很多名人。</p>
 <p>他的祖父俞大纯，曾任中华民国交通部陇海铁路局局长；他的父亲黄敬，原名俞启威，曾经是中共领导人毛泽东的妻子江青的前男友，当过第一机械工业部部长；他的堂叔祖父俞大维，曾任中华民国国防部长；他的堂婶蒋孝章，是中华民国总统蒋经国的女儿。</p>
 <p>他的母亲范瑾，也出身名门，文革前当过中共北京市委常委、北京市副市长，《北京日报》社长等职务；文革结束后，担任过北京市人大副主任、北京市政协主席。</p>
 <p>他的弟弟俞正声，官至中共政治局常委、中共全国政协主席。</p>
 <p>俞强声，1940年出生，毕业于北京国际关系学院。1960年代中期，进入北京市公安局一处（政治保卫处）工作。文革时期，担任过北京市公安局“一打三反”运动专案组成员，负责查办张郎郎“叛国投敌”案，张郎郎被指控为“法国间谍”。</p>
 <p>文革结束后，俞强声官至国家安全部北美情报司司长。1980年代初，他就被美国中央情报机构策反，成为美国中情局的“线人”，代号叫“舵手”（Planesman），秘密为美国提供中方情报。</p>
-<p>1985年5月，俞强声<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%9B%E9%80%83%E7%BE%8E%E5%9B%BD.md#1">叛逃美国</a>。</p>
+<p>1985年5月，俞强声叛逃美国。</p>
 <h2><strong>俞强声为什么叛逃？</strong></h2>
 <p>据自由亚洲专栏作家高新讲，一位知情人士告诉他，导致俞强声叛逃的真正“思想根源”，是“杀父之仇”。</p>
 <p>何为“杀父之仇”？俞强声的父亲黄敬，是受到毛泽东的“激烈斥责”后发疯、跳楼自杀的。</p>
@@ -30,19 +30,19 @@
 <p>“文化大革命期间，我母亲1966年被打倒，1968年蹲监狱，1975年回来，出来之后我就感觉她精神上不正常了，老有被迫害的感觉。一直到前年她去世，都拒绝做任何体检。我的妹妹，‘文革’开始时是一个高中生，在学校里被批斗，后来也得了精神分裂症，自杀了。我们亲属在‘文革’中死去的，有六、七人。”</p>
 <p>俞强声的母亲、妹妹等六、七亲人在文革中被迫害致死，对他最终选择叛逃美国也可能有重要影响。</p>
 <h2><strong>俞强声叛逃导致了什么后果？</strong></h2>
-<p>俞强声叛逃的最严重的后果是，导致中共潜伏在美国30多年的高级间谍金无怠被抓捕。</p>
+<p>俞强声叛逃的最严重的后果是，导致中共潜伏在美国三十多年的高级间谍金无怠被抓捕。</p>
 <p>金无怠，1922年在北京出生，1947年燕京大学毕业，先任美国驻上海领事馆译员，后调入美国国务院“外国广播情报服务局”（该机构后来并入美国中央情报局），1965年加入美国籍，1969年调中情局总部任情报分析员，1981年退休。退休后仍任中情局顾问。</p>
 <p>金无怠曾多次往返美国、香港、多伦多、澳门、北京，同中共情报部门的官员接头，提供文件、照片和其它资料。</p>
 <p>1985年11月22日晚10点37分，美国联邦助理检察官亚若尼卡，授权美国联邦情报局（FBI）探员，正式逮捕金无怠。</p>
-<p>1985年11月27日，美国联邦检察院对金无怠提起诉讼，指控金1952年至1985年的30多年间，向中共提供了大量重要情报。</p>
+<p>1985年11月27日，美国联邦检察院对金无怠提起诉讼，指控金1952年至1985年的三十多年间，向中共提供了大量重要情报。</p>
 <p>1986年2月4日，美国弗吉尼亚州亚历山大市东区地方法院正式开庭审理金无怠案。2月7日，陪审团裁定：对金的17项控罪全部成立，其中包括共谋间谍罪、危害国家安全罪、泄露国家机密罪等，定于3月4日宣判。</p>
 <p>但是，未等到宣判，1986年2月21日早6点半，金无怠吃过早饭、回到监室后就自杀了。当时他把一个垃圾袋套在头上，用一根鞋带绑紧在脖子上，窒息而死。</p>
 <p>金的太太周瑾予1998年在台湾出版《我的丈夫金无怠之死》一书。书中谈到，金被捕后，曾要求她到北京面见邓小平，希望中共能与美国谈判，像美国与苏联以前曾经做过的那样交换间谍，让自己回到中国。</p>
 <p>但是，中共不承认与金有任何关系。</p>
 <p>当时的中共外交部发言人李肇星，回答记者提问时称：“金无怠事件是美国反华势力编造的……（中共）从来没有向美国派遣过任何间谍……（中共）不认识这位自称是中国间谍的金无怠先生。”</p>
 <h2><strong>俞强声是怎么将有关金无怠的情报泄露给美国的？</strong></h2>
-<p>据美国联邦调查局中国反情报组组长IC·史密斯讲，1982年9月，俞强声给美国中央情报局的官员发信息，称有一名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">中共间谍</a>潜伏在美国情报部门。</p>
-<p>之后，在一个月的时间内，中情局官员与俞强声多次联系，以确认这名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">中共间谍</a>的身份。这些信息最后都汇总到史密斯那里。</p>
+<p>据美国联邦调查局中国反情报组组长IC·史密斯讲，1982年9月，俞强声给美国中央情报局的官员发信息，称有一名中共间谍潜伏在美国情报部门。</p>
+<p>之后，在一个月的时间内，中情局官员与俞强声多次联系，以确认这名中共间谍的身份。这些信息最后都汇总到史密斯那里。</p>
 <p>联邦调查局根据这些情报，拼凑出这名中共间谍的有关线索：</p>
 <p>1982年2月6日，他搭乘美国泛美航空公司的班机抵达北京，入住北京前门饭店553号房间。之后，他打电话联络中共公安部外事局副局长朱恩涛。为了安全起见，两人用英语交谈。在北京期间，公安部举行了一个聘请仪式，他被任命为副局级官员。当天，中共情报界的高官悉数出席，为他举办了一个高规格的晚宴，吃了熊掌，还给了他五万美元。2月27日，他离开中国，返回美国。</p>
 <p>顺着这些线索，美国联邦调查局终于从旧金山海关的航班入境记录中，查到了这名中共间谍的个人信息：金无怠（Larry Chin），美国公民，华裔，男性，61岁。之后，确认他是美国中央情报前雇员，已退休，但仍以合同工身份为中情局工作。</p>
@@ -51,47 +51,44 @@
 <h2><strong>邓小平的震怒</strong></h2>
 <p>据潘永祥的文章《江青前夫之子俞强声叛逃揭露中共潜伏美国特务金无怠案》讲，1985年5月，俞强声叛逃案震惊中南海。</p>
 <p>邓小平要求时任中共中央总书记胡耀邦，立即召集中共政治局常委和中央政法委领导班子成员到勤政殿会商对策。</p>
-<p>邓小平在会上讲，这是中共建政以来党的特殊工作战线上最严重的一次叛逃事件。看得见的损失是，将导致中共在美国的关键情报人员被捕，中共苦心经营30多年的驻美情报网将垮掉一大半；看不见的损失是，首开了中共重要情报人员叛逃的先例，特别是由党的高级干部子女担任的重要情报人员叛逃的先例，潜在的政治影响巨大。</p>
+<p>邓小平在会上讲，这是中共建政以来党的特殊工作战线上最严重的一次叛逃事件。看得见的损失是，将导致中共在美国的关键情报人员被捕，中共苦心经营三十多年的驻美情报网将垮掉一大半；看不见的损失是，首开了中共重要情报人员叛逃的先例，特别是由党的高级干部子女担任的重要情报人员叛逃的先例，潜在的政治影响巨大。</p>
 <p>邓小平大发雷霆，胡耀邦严令层层追责，导致国安部首任部长凌云被免职，贾春旺接掌国安部。</p>
 <h2><strong>结语</strong></h2>
 <p>俞强声叛逃美国，对中共至少造成五大影响：</p>
-<p>第一，他助美国揪出了潜伏30多年的中共高级间谍金无怠；第二，他将中共对中共间谍“卸磨杀驴”的丑恶嘴脸再次在全世界曝了光；第三，他将部分中共高干子女对中共的强烈不满展现在全世界面前；第四，他在中共国安系统引发大震荡，除国安部长凌云被免职外，中共不得不对国安系统进行大调整；第五，他开了中共高官家属子女叛逃西方国家的先例。</p>
+<p>第一，他助美国揪出了潜伏三十多年的中共高级间谍金无怠；第二，他将中共对中共间谍“卸磨杀驴”的丑恶嘴脸再次在全世界曝了光；第三，他将部分中共高干子女对中共的强烈不满展现在全世界面前；第四，他在中共国安系统引发大震荡，除国安部长凌云被免职外，中共不得不对国安系统进行大调整；第五，他开了中共高官家属子女叛逃西方国家的先例。</p>
 <p>这些也是邓小平至死都不能原谅凌云的原因之所在。</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150547.md#1">王友群：中共在台湾问题上极端虚伪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154748.md#1">王友群：1948年刘伯承邓小平为何争吵分兵？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165327.md#1">王友群：中共的颠覆罪、间谍罪、分裂罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14166761.md#1">王友群：没有鸦片烟就没有共产党？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：六合一多功能气炸锅 厨房好帮手 6折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/3/n14150547.md#1">王友群：中共在台湾问题上极端虚伪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/9/n14154748.md#1">王友群：1948年刘伯承邓小平为何争吵分兵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/24/n14165327.md#1">王友群：中共的颠覆罪、间谍罪、分裂罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14166761.md#1">王友群：没有鸦片烟就没有共产党？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/23/n11134725.md#1" target="_blank">共产暴政录：东南亚排华的重要根源是共产党</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/23/n9759878.md#1" target="_blank">钟革：朱毛红军使国人成人血馒头（七）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161678.md#1">【古道人生】不知情之下娶了麻疯女 他怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169186.md#1">【未解之谜】紫禁城风水（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169157.md#1">拥抱自信 走向阳光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150007.md#1">受天帝责罚化身为燕 结缘修道人家的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171670.md#1">【新闻五人行】经济崩塌在即 中共又撕“契约”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172312.md#1">【马克时空】探雷排雷有新招 无人机成主力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172269.md#1">【十字路口】中共国师泄北京焦虑与5大危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170455.md#1">中共政治局会议未提三中全会 中南海陷内乱？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170180.md#1">中国股市跌至五年低点 中共“救市”止不住</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170544.md#1">【新闻大家谈】又现彭立发 天津车贴标语满街跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170432.md#1">TWICE Momo捐款助灾区 出国举手幅逗乐粉丝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170731.md#1">唐嫣自曝婚前6次被分手 罗晋喊5个字即和好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14170017.md#1">杨幂首次回应3亿对赌传闻 多个话题登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169962.md#1">王家卫《繁花》剧集插曲疑侵权 歌手赵传发声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170686.md#1">时隔逾30年 杨紫琼首曝情断前夫主因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165139.md#1">睡前简单6招拉筋操 助眠防抽筋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">SONGMICS 6层大容量珠宝盒 带镜子（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170369.md#1">飞机落地时不应该鼓掌？ 旅游专家教你礼仪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171087.md#1">“浩克”谈昔日生活：住月租200美元小房间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165423.md#1">每天3分钟 用“TO BE思考”笔记翻转人生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/2/n14172369.htm">王友群：邓小平为何撤了国安部长凌云的职？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172369.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/2/n14172369.htm">王友群：邓小平为何撤了国安部长凌云的职？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/2/n14172369.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
